# binjs-ref

./: .gitignore  .gitmodules  .travis.yml  CONTRIBUTING.md  Cargo.toml  FORMAT.md  LAYOUT.md  LICENSE  README.md  aliases.js  bpy.py  build.rs  encode.py  idl.py  opt.py  package-lock.json  package.json  search-index.js  settings.html  source-files.js  test.sh  tycheck.py
adler32/: all.html  fn.adler32.html  index.html  struct.RollingAdler32.html
aho_corasick/: struct.Error.html  struct.FindIter.html  struct.FindOverlappingIter.html  struct.StreamFindIter.html
alloc_no_stdlib/: all.html  enum.AllocatorC.html  fn.bzero.html  fn.uninitialized.html  index.html  macro.bind_global_buffers_to_allocator.html  macro.declare_stack_allocator_struct.html  macro.define_allocator_memory_pool.html  macro.define_index_ops!.html  macro.define_index_ops.html  macro.define_index_ops_mut!.html  macro.define_index_ops_mut.html  macro.define_stack_allocator_traits.html  macro.static_array!.html  macro.static_array.html  sidebar-items.js  struct.AllocatedStackMemory.html  struct.CallocBackingStore.html  struct.StackAllocator.html  trait.AllocatedSlice.html  trait.Allocator.html  trait.SliceWrapper.html  trait.SliceWrapperMut.html
alloc_stdlib/: all.html  index.html  sidebar-items.js  struct.AllocatedStackMemory.html  struct.StackAllocator.html  trait.Allocator.html  trait.SliceWrapper.html  trait.SliceWrapperMut.html
assert_matches/: all.html  index.html  macro.assert_matches.html  macro.debug_assert_matches.html  sidebar-items.js
benches/: bench.rs  bench_fb.rs  test.js
bincode/: enum.ErrorKind.html  struct.Config.html  trait.BincodeRead.html
binjs/: all.html  index.html  sidebar-items.js
binjs_convert_from_json/: all.html  fn.convert.html  fn.main.html  fn.main_aux.html  index.html  sidebar-items.js  struct.DummyNode.html
binjs_decode/: all.html  fn.main.html  fn.main_aux.html  fn.parse_tree.html  index.html  sidebar-items.js  struct.Options.html
binjs_dump/: all.html  fn.main.html  index.html
binjs_encode/: all.html  enum.Source.html  fn.export_section.html  fn.handle_path.html  fn.handle_path_or_text.html  fn.main.html  fn.main_aux.html  index.html  sidebar-items.js  struct.EncodeParams.html  struct.Options.html
binjs_es6/: all.html  enum.EnrichError.html  index.html  sidebar-items.js  struct.Cleanup.html  struct.Enrich.html
binjs_generate_prediction_tables/: all.html  fn.handle_path.html  fn.handle_path_or_text.html  fn.main.html  fn.main_aux.html  index.html  sidebar-items.js  struct.Options.html
binjs_generic/: all.html  index.html  sidebar-items.js
binjs_io/: all.html  enum.DictionaryPlacement.html  enum.Format.html  enum.TokenReaderError.html  enum.TokenWriterError.html  index.html  macro.for_field_in_per_static.html  macro.for_field_in_user_extensible!.html  macro.for_field_in_user_extensible.html  macro.print_file_structure.html  sidebar-items.js  struct.CompressionTarget.html  trait.FormatProvider.html
binjs_meta/: all.html  index.html
binjs_shared/: all.html  enum.SharedString.html  enum.VisitMe.html  index.html  macro.const_with_str!.html  macro.const_with_str.html  macro.shared_string!.html  macro.shared_string.html  sidebar-items.js  struct.F64.html  struct.FieldName.html  struct.IdentifierName.html  struct.InterfaceName.html  struct.Offset.html  struct.PropertyKey.html  type.IOPath.html  type.IOPathItem.html  type.Identifier.html
brotli/: all.html  constant.VERSION.html  enum.BrotliResult.html  fn.BrotliDecompress.html  fn.BrotliDecompressCustomAlloc.html  fn.BrotliDecompressCustomIo.html  fn.BrotliDecompressCustomIoCustomDict.html  fn.BrotliDecompressStream.html  fn.TransformDictionaryWord.html  fn.copy_from_to.html  index.html  sidebar-items.js  struct.AllocatedStackMemory.html  struct.BrotliState.html  struct.Decompressor.html  struct.DecompressorCustomIo.html  struct.DecompressorWriter.html  struct.DecompressorWriterCustomIo.html  struct.HeapAlloc.html  struct.HuffmanCode.html  trait.Allocator.html  (+8 more)
crates/binjs_es6/: Cargo.toml  build.rs
crates/binjs_es6/src/: ast.rs  io.rs  lazy.rs  lib.rs  scopes.rs  skip.rs  sublanguages.rs
crates/binjs_generate_library/: Cargo.toml  README.md
crates/binjs_generate_library/examples/: generate_library.rs
crates/binjs_generate_library/src/: lib.rs
crates/binjs_generic/: Cargo.toml  build.rs
crates/binjs_generic/src/: annotate.rs  es6.rs  lib.rs  pick.rs  syntax.rs  util.rs
crates/binjs_generic/src/io/: decode.rs  encode.rs  mod.rs
crates/binjs_io/: Cargo.toml
crates/binjs_io/src/: escaped_wtf8.rs  io.rs  labels.rs  lib.rs  multiarith.rs  multistream.rs  repair.rs  repair2.rs  simple.rs  util.rs  xml.rs
crates/binjs_io/src/binjs_json/: mod.rs  read.rs  write.rs
crates/binjs_io/src/bytes/: atoms.rs  bool.rs  compress.rs  decoders.rs  float.rs  lengthwriter.rs  mod.rs  serialize.rs  strings.rs  varnum.rs
crates/binjs_io/src/context/: format.rs  huffman.rs  mod.rs  prelude.rs  strings.rs  varnum.rs
crates/binjs_io/src/context/huffman/: codebook.rs  mod.rs  read.rs
crates/binjs_io/src/entropy/: baseline.rs  dictionary.rs  format.rs  lazy_stream.rs  mod.rs  model.rs  predict.rs  probabilities.rs  read.rs  rw.rs  tree.rs  util.rs  write.rs
crates/binjs_io/src/entropy/read/: content_decoders.rs  mod.rs  prelude_decoders.rs
crates/binjs_io/src/entropy/write/: lazy_stream.rs  mod.rs
crates/binjs_io/src/io/: content.rs  deprecated.rs  mod.rs  statistics.rs
crates/binjs_io/src/json/: mod.rs  parser.rs  read.rs  value.rs  write.rs
crates/binjs_io/src/multiarith/: bit.rs  mod.rs  model.rs  predict.rs  read.rs  tree.rs  write.rs
crates/binjs_io/src/multipart/: mod.rs  read.rs  write.rs
crates/binjs_meta/: Cargo.toml
crates/binjs_meta/examples/: generate_library.rs  generate_spidermonkey.rs  spidermonkey.rules.yaml
crates/binjs_meta/src/: export.rs  import.rs  lib.rs  spec.rs  util.rs
crates/binjs_wasm/: .gitignore  Cargo.toml  encode.js  encode_browser.js  index.html  metadata.json  package.json  webpack.config.js
crates/binjs_wasm/.cargo/: config
crates/binjs_wasm/src/: lib.rs
(+11287 files in other folders)
