[package]
name = "binjs_es6"
version = "0.1.1"
authors = ["David Teller <D.O.Teller@gmail.com>"]
build = "build.rs"

[dependencies]
assert_matches = "*"
binjs_io = { path = "../binjs_io/", version = "*" }
binjs_shared = { path = "../binjs_shared/", version = "*" }
json = "^0.11"
log = "*"

[build-dependencies]
binjs_generate_library = { path = "../binjs_generate_library/", version = "*" }
binjs_meta = { path = "../binjs_meta/", version = "*" }
webidl = "^0.6"
