[package]
name = "binjs_es6"
version = "0.2.1"
authors = ["David Teller <D.O.Teller@gmail.com>"]
build = "build.rs"

[dependencies]
assert_matches = "^1.0"
binjs_io = { path = "../binjs_io/", version = "*" }
binjs_shared = { path = "../binjs_shared/", version = "*" }
clap = "^2"
itertools = "^0.7"
serde = { version = "^1.0", features = ["derive"] }
log = "^0.4"

[build-dependencies]
binjs_generate_library = { path = "../binjs_generate_library/", version = "*" }
binjs_meta = { path = "../binjs_meta/", version = "*" }
