[package]
name = "binjs_generate_library"
version = "0.2.0"
authors = ["David Teller <D.O.Teller@gmail.com>"]

[dependencies]
binjs_meta = { path = "../binjs_meta/", version = "*" }
env_logger = "^0.5.6"
itertools = "^0.7"
log = "^0.4"

[dev-dependencies]
clap = "^2"
webidl = "^0.7"
yaml-rust = "^0.4"
