[package]
name = "binjs_generic"
version = "0.1.2"
authors = ["David Teller <D.O.Teller@gmail.com>"]
build = "build.rs"

[features]
# An implementation of compression that divides data across several streams
# in an attempt to make it easier to compress.
#
# Experimental, probably deprecated.
multistream = []

[dependencies]
binjs_es6 = { path = "../binjs_es6", version = "*" }
binjs_io = { path = "../binjs_io", version = "*" }
binjs_meta = { path = "../binjs_meta", version = "*" }
binjs_shared = { path = "../binjs_shared", version = "*" }
json = "^0.11"
log = "^0.4"
rand = "^0.6"

[dev-dependencies]
clap = "^2.0"

[build-dependencies]
binjs_generate_library = { path = "../binjs_generate_library", version = "*" }
binjs_meta = { path = "../binjs_meta", version = "*" }
webidl = "^0.8"
