[package]
name = "binjs_generic"
version = "0.1.2"
authors = ["David Teller <D.O.Teller@gmail.com>"]
build = "build.rs"

[features]
# An implementation of compression that divides data across several streams
# in an attempt to make it easier to compress.
#
# Experimental, probably deprecated.
multistream = []

[dependencies]
binjs_meta = { path = "../binjs_meta", version = "*" }
serde_json = "^1.0.38"
rand = "^0.6"

[build-dependencies]
binjs_generate_library = { path = "../binjs_generate_library", version = "*" }
binjs_meta = { path = "../binjs_meta", version = "*" }
