[package]
name = "binjs_io"
version = "0.2.0"
authors = ["David Teller <D.O.Teller@gmail.com>"]

[dependencies]
bincode = "*"
binjs_shared = { path = "../binjs_shared", version = "*" }
brotli = "*"
clap = "^2.32"
derive_more = "0.13.0"
flate2 = "^1.0"
itertools = "*"
lzw = "*"
log = "*"
rand = "^0.4"
range-encoding = "0.1.9"
serde = "^1.0"
serde_derive = "^1.0"
vec_map = "*"
xml-rs = "*"

[dev-dependencies]
env_logger = "*"
assert_matches = "*"
