[package]
name = "binjs_io"
version = "0.2.0"
authors = ["David Teller <D.O.Teller@gmail.com>"]

[dependencies]
bincode = "^1.0"
binjs_shared = { path = "../binjs_shared", version = "*" }
brotli = "^3.0"
clap = "^2.32"
derive_more = "^0.13"
flate2 = "^1.0"
itertools = "^0.7"
lzw = "^0.10"
log = "^0.4"
rand = "^0.6"
range-encoding = "^0.1"
serde = "^1.0"
serde_derive = "^1.0"
smallvec = "^0.6"
vec_map = "^0.8"
xml-rs = "^0.8"

[dev-dependencies]
env_logger = "^0.6"
assert_matches = "^1.0"
