[package]
name = "binjs_io"
version = "0.2.0"
authors = ["David Teller <D.O.Teller@gmail.com>"]

[dependencies]
bincode = "^1.0"
binjs_meta = { path = "../binjs_meta", version = "*" }
binjs_shared = { path = "../binjs_shared", version = "*" }
brotli = "^3.0"
clap = "^2.32"
derive_more = "0.99.3"
flate2 = "^1.0"
itertools = "^0.8"
serde_json = { version = "^1.0.38", features = ["unbounded_depth"] }
lzw = "^0.10"
log = "^0.4"
rand = "0.7.3"
range-encoding = "^0.2"
serde = { version = "^1.0", features = ["derive", "rc"] }
smallvec = "1.2.0"
vec_map = "^0.8"
xml-rs = "^0.8"

[dev-dependencies]
env_logger = "0.7.1"
tempdir = "^0.3"

[features]
default = []

# If specified, activate features that require Nightly only compiler features.
#
# At the time of this writing, this affects only documentation generation.
unstable = []
